--- a/Bonobo.Git.Server/Views/Repository/Index.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Index.cshtml
@@ -74,7 +74,7 @@
 {
     <div class="summary-success">
         <p>@Resources.Repository_Create_Success</p>
-                <p>@Html.ActionLink(string.Format(@Resources.Repository_Create_Success_Go_To, TempData["SuccessfullyCreatedRepositoryName"].ToString()), "Detail", new { id = TempData["SuccessfullyCreatedRepositoryId"].ToString() })</p>
+                <p>@Html.ActionLink(string.Format(@Resources.Repository_Create_Success_Go_To, TempData["SuccessfullyCreatedRepositoryName"].ToString()), "Tree", new { id = TempData["SuccessfullyCreatedRepositoryId"].ToString() })</p>
     </div>
 }
 @if (TempData["CloneSuccess"] as bool? == true)
