--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -146,7 +146,7 @@ else
                             <input class="form-control" id="ServiceAccounts[{i}].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
                         </div>
                         <div class="col pure-control-group">
-                            <label> @Resources.SA_Name </label> @*"name" handels the backend with class form-control / {i} is replaced in javascipt by the needed index*@
+                            <label> @Resources.SA_Name </label> 
                             <input class="form-control" id="ServiceAccounts_{i}__.ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
                             <span class="field-validation-valid text-danger"
                                   data-valmsg-for="ServiceAccounts[{i}].ServiceAccountName"
@@ -233,23 +233,21 @@ else
                             var itemsTemplate = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
                             if (itemsTemplate != null)
                             {
-                            <option></option>
+                                <option></option>
                                 foreach (var kd in itemsTemplate)
                                 {
-                                <option value="@kd.Value">@kd.Text</option>
-                                    }
+                                    <option value="@kd.Value">@kd.Text</option>
                                 }
                             }
+                        }
                     </select>
-@*                   <input style="display: none;" id="Dependencies_{i}__KnownDependency_Id"  name="Dependencies[{i}].KnownDependency.Id"/>
-*@                    <div class="pure-control-group" id="newKD-Dependencies_{i}__KnownDependenciesId" style="display: none;">
-                        @*@{var txtBoxIdTemplate = "KDInputDependencies_" + i + "__KnownDependenciesId"}*@
-                            <label class="pure-form-aligned pure-control-group"></label>
-                            <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
-                            <button type="button" id="{i}" onclick="checkIfKDExists(this.id, 'KDInputDependencies_'+ this.id +'__KnownDependenciesId')" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
-
-                    </div>
                     <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                </div>
+                <div class="pure-control-group" id="newKD-Dependencies_{i}__KnownDependenciesId" style="display: none;">
+                    <label class="pure-form-aligned pure-control-group"></label>
+                    <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
+                    <button type="button" id="{i}" onclick="checkIfKDExists(this.id, 'KDInputDependencies_'+ this.id +'__KnownDependenciesId')" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
+
                 </div>
                 <div class="col pure-control-group">
                     <label> @Resources.Dependencies_VersionInUse </label>
@@ -258,7 +256,7 @@ else
                           data-valmsg-for="Dependencies[{i}].VersionInUse"
                           data-valmsg-replace="true">
                     </span>
-                    
+
                 </div>
                 <div class="col pure-control-group">
                     <label> @Resources.Dependencies_DateUpdated </label>
@@ -279,8 +277,7 @@ else
                     @Html.LabelFor(m => m.Dependencies[i].KnownDependency.ComponentName)
                     <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName)</div>
                     @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
-    @*                <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.Id)</div>
-    *@                @{
+                    @{
                         var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
                         for (int j = 0; j < items.Count(); j++)
                         {
@@ -296,10 +293,10 @@ else
                         @Html.DropDownListFor(m => m.Dependencies[i].KnownDependenciesId, items, new
                         {
                             @class = "dropDownKD",
-                            @*@disabled = "disabled",*@
-    @style = "width: 206.944px",
-    @onChange = "javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)"
-    });
+                            @disabled = "disabled",
+                            @style = "width: 206.944px; color: #6B6B6B;",
+                            @onChange = "javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)"
+                        });
                         var DepenId = Model.Dependencies[i].Id;
                         <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_@i" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
                     }
@@ -362,12 +359,9 @@ function DisplayComponentNameNewInputField(text, index, val) {
         $("#newKD-" + index).css("display", "inline-block");
     } else {
         $("#newKD-" + index).css("display", "none");
-        //var i = index.split("_")[1];
-        //$(`#Dependencies_${i}__KnownDependency_Id`).val(val);
     }
 }
     function checkIfKDExists(i, input) {
-        //var txtBoxId = "KDInputDependencies_" + i + "__KnownDependenciesId";
         var inputTemplate = document.getElementById("KDInputDependencies_" + i + "__KnownDependenciesId");
         console.log(input);
         var newKDName = inputTemplate.value;
@@ -380,9 +374,9 @@ function DisplayComponentNameNewInputField(text, index, val) {
         }
     }
     if (newKDName == "") {
-        alert("Please input a value, the new component name cannot be blank");
+        alert("The new component name cannot be blank");
     } else if (exists == 1) {
-        alert("The component name entered already exists, please input a component name that does not exist or select the existing one");
+        alert("The component name entered already exists");
     } else {
         addKDtoDropDown(i, newKDName, dropDown);
     }
@@ -398,25 +392,16 @@ function addKDtoDropDown(i, newKDName, dropDown) {
             option.text = newKDName;
             option.value = response;
             option.selected = true;
-            //option.selected = "selected";
             dropDown.add(option);
 
             var index = `Dependencies_${i}__KnownDependenciesId`;
             $("#newKD-" + index).css("display", "none");
-            //$(`#Dependencies_${i}__KnownDependency_Id`).val(response);
         },
         failure: function (response) {
             alert("Failed to add new component name");
         }
     });
     return false;
-
-    // 1. Get rid of known dependency function --
-    // 2. Get rid of partial view --
-    // 3. Add check to see if known dependency exists --
-    // 4. Add css styling to make it look good
-    // 5. Get rid of commented code
-    // 6. Put my code into javascript file
 }
 </script>
 
