--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -159,8 +159,12 @@
                         <summary>
                             <div class="sidebar-text">
                                 @{
-                                    string[] VersionInUseFormat = dependency.VersionInUse.Split('.');
-                                    string VersionInUseFormat2 = (VersionInUseFormat.Length == 1 ? VersionInUseFormat[0] : $"{VersionInUseFormat[0]}.{VersionInUseFormat[1]}");
+                                    string VersionInUseFormat2 = "";
+                                    if (dependency.VersionInUse != null)
+                                    {
+                                        string[] VersionInUseFormat = dependency.VersionInUse.Split('.');
+                                        VersionInUseFormat2 = (VersionInUseFormat.Length == 1 ? VersionInUseFormat[0] : $"{VersionInUseFormat[0]}.{VersionInUseFormat[1]}");
+                                    }
                                 }
                                 <i class="fa fa-chevron-down"></i><label for="@dependency.Id" type="text" style="display:inline; font-size: 100%; padding-right:5px; font-weight:normal; " class="removeVisualInput" readonly> @dependency.KnownDependency.ComponentName</label><input style="text-overflow: ellipsis; " class="removeVisualInput" value="@VersionInUseFormat2" readonly="">
                                 <input type="text" id="@dependency.Id" style="display:none;" class="removeVisualInput" value="@dependency.KnownDependency.ComponentName" readonly>
