--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -274,63 +274,67 @@ else
         </template>
 
 
-        @for (int i = 0; i < Model.Dependencies.Count; i++)
-        {
-            <div class="row Dependencies-details" id="Dependencies_@i" name="Dependencies-details">
-                <div class="pure-control-group">
-                    @Html.LabelFor(m => m.Dependencies[i].KnownDependency.ComponentName)
-                    <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName)</div>
-                    @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
-                    @{
-                        var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
-                        for (int j = 0; j < items.Count(); j++)
-                        {
-                            if (items.ToList()[j].Value == Model.Dependencies[i].KnownDependency.Id.ToString())
+        <table>
+            <tr>
+                <th>Component Name</th>
+                <th>Version In Use</th>
+                <th>Date Updated</th>
+            </tr>
+            @for (int i = 0; i < Model.Dependencies.Count; i++)
+            {
+                <tr class="row Dependencies-details" id="Dependencies_@i" name="Dependencies-details">
+                    <th class="pure-control-group">
+                        <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName)</div>
+                        @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
+                        @{
+                            var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
+                            for (int j = 0; j < items.Count(); j++)
                             {
-                                items.ToList()[j].Selected = true;
+                                if (items.ToList()[j].Value == Model.Dependencies[i].KnownDependency.Id.ToString())
+                                {
+                                    items.ToList()[j].Selected = true;
+                                }
+                                else
+                                {
+                                    items.ToList()[j].Selected = false;
+                                }
                             }
-                            else
+                            @Html.DropDownListFor(m => m.Dependencies[i].KnownDependenciesId, items, new
                             {
-                                items.ToList()[j].Selected = false;
-                            }
+                                @class = "dropDownKD",
+                                @disabled = "disabled",
+                                @style = "width: 206.944px; color: #6B6B6B;",
+                                @onChange = "javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)"
+                            });
+                            var DepenId = Model.Dependencies[i].Id;
+                            <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_@i" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
                         }
-                        @Html.DropDownListFor(m => m.Dependencies[i].KnownDependenciesId, items, new
-                        {
-                            @class = "dropDownKD",
-                            @disabled = "disabled",
-                            @style = "width: 206.944px; color: #6B6B6B;",
-                            @onChange = "javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)"
-                        });
-                        var DepenId = Model.Dependencies[i].Id;
-                        <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_@i" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
-                    }
-                </div>
-                <div class="pure-control-group" id="@($"newKD-Dependencies_{i}__KnownDependenciesId")" style="display:none;">
-                    @{
-                        var txtBoxId = "KDInputDependencies_" + i + "__KnownDependenciesId";
-                        <label class="pure-form-aligned pure-control-group"></label>
-                        <input class="pure-form valid" id=@txtBoxId type="text" />
-                        <button type="button" onclick="checkIfKDExists(@(i))" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
-                    }
-                </div>
-                <div class="pure-control-group">
-                    @Html.LabelFor(m => m.Dependencies[i].VersionInUse)
-                    @Html.TextBoxFor(m => m.Dependencies[i].VersionInUse)
-                    @Html.ValidationMessageFor(m => m.Dependencies[i].VersionInUse)
-                </div>
-                <div class="pure-control-group">
-                    @Html.LabelFor(m => m.Dependencies[i].DateUpdated)
-                    @Html.TextBoxFor(m => m.Dependencies[i].DateUpdated)
-                    @Html.ValidationMessageFor(m => m.Dependencies[i].DateUpdated)
-                </div>
+                    <td class="pure-control-group" id="@($"newKD-Dependencies_{i}__KnownDependenciesId")" style="display:none;">
+                        @{
+                            var txtBoxId = "KDInputDependencies_" + i + "__KnownDependenciesId";
+                            <label class="pure-form-aligned pure-control-group"></label>
+                            <input class="pure-form valid" id=@txtBoxId type="text" />
+                            <button type="button" onclick="checkIfKDExists(@(i))" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
+                        }
+                    </td>
+                    <th class="pure-control-group">
+                        @Html.TextBoxFor(m => m.Dependencies[i].VersionInUse)
+                        @Html.ValidationMessageFor(m => m.Dependencies[i].VersionInUse)
+                    </th>
+                    <th class="pure-control-group">
+                        @Html.TextBoxFor(m => m.Dependencies[i].DateUpdated)
+                        @Html.ValidationMessageFor(m => m.Dependencies[i].DateUpdated)
+                    </th>
 
-                <div class="pure-control-group" style="display:none">
-                    @Html.HiddenFor(m => m.Dependencies[i].Id);
-                    @Html.HiddenFor(m => m.Dependencies[i].RepositoryId);
-                    @Html.HiddenFor(m => m.Dependencies[i].KnownDependenciesId);
-                </div>
-            </div>
-        }
+                    <div class="pure-control-group" style="display:none">
+                        @Html.HiddenFor(m => m.Dependencies[i].Id);
+                        @Html.HiddenFor(m => m.Dependencies[i].RepositoryId);
+                        @Html.HiddenFor(m => m.Dependencies[i].KnownDependenciesId);
+                    </div>
+                </tr>
+            }
+
+        </table>
     </fieldset>
 
     <div class="pure-control-group">
