--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -264,7 +264,7 @@ else
                 </div>
                 <div class="col pure-control-group">
                     <label> @Resources.Dependencies_DateUpdated </label>
-                    <input class="form-control" type="datetime" id="Dependencies_{i}__.DateUpdated" name="Dependencies[{i}].DateUpdated" value="1/1/1900 12:00:00 AM" />
+                    <input class="form-control" type="datetime" id="Dependencies_{i}__.DateUpdated" name="Dependencies[{i}].DateUpdated" value="1/1/1900"/>
                     <span class="field-validation-valid text-danger"
                           data-valmsg-for="Dependencies[{i}].DateUpdated"
                           data-valmsg-replace="true">
