--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -144,73 +144,45 @@ else
         <legend>
             @Resources.SA
         </legend>
-        <template id="serviceAccountrow">
-            <div class="row service-account-details" id="ServiceAccounts_{i}" name="service-account-details">
-                <div class=" col pure-control-group" style="display:none;">
-                    <label> @Resources.SA_ID </label>
-                    <input class="form-control" id="ServiceAccounts[{i}].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
-                </div>
-                <div class="col pure-control-group">
-                    <label> @Resources.SA_Name </label>
-                    <input class="form-control" id="ServiceAccounts_{i}__.ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
-                    <span class="field-validation-valid text-danger"
-                          data-valmsg-for="ServiceAccounts[{i}].ServiceAccountName"
-                          data-valmsg-replace="true">
-                    </span>
-                    <button type="button" onclick="remField(this.id);" id=" ServiceAccountBtn_{i}" title="Remove Service Account" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
-                </div>
-                <div class="col pure-control-group">
-                    <label> @Resources.SA_InPassManager </label>
-                    <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" value="true" data-val="true" data-val-required="The InPassManager field is required." />
-                    <span class="field-validation-valid text-danger"
-                          data-valmsg-for="ServiceAccounts[{i}].InPassManager"
-                          data-valmsg-replace="true">
-                    </span>
-                </div>
-                <div class="col pure-control-group">
-                    <label> @Resources.SA_PassLastUpdated </label>
-                    <input class="form-control" type="datetime" id="ServiceAccounts_{i}__.PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
-                    <span class="field-validation-valid text-danger"
-                          data-valmsg-for="ServiceAccounts[{i}].PassLastUpdated"
-                          data-valmsg-replace="true">
-                    </span>
-                </div>
-            </div>
-        </template>
-
-
+       
         @if (Model != null)
-        {
-            for (int i = 0; i < Model.ServiceAccounts.Count; i++)
-            {
-                var id = "ServiceAccounts_" + i;
-                var btnId = "ServiceAccountBtn_" + i;
-                <div class="service-account-details" id="@id">
-                    <div class="pure-control-group">
-                        @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                        @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                        @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                        @{ }
-                        <button type="button" onclick=" remField(this.id);" id="@btnId" title="Remove Service Account" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
-                    </div>
-                    <div class="pure-control-group">
-                        @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
-                        @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
-                        @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
-                    </div>
-                    <div class="pure-control-group">
-                        @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                        @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                        @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                    </div>
-                    <div class="pure-control-group" style="display:none;">
-                        @Html.LabelFor(m => m.ServiceAccounts[i].Id)
-                        @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
-                        @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
-                        @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
-                    </div>
-                </div>
-            }
+        {   <table class="pure-table" id="service-account-table">
+        <tr>
+            <th>@Resources.SA_Name</th>
+            <th>@Resources.SA_InPassManager</th>
+            <th>@Resources.SA_PassLastUpdated</th>
+        </tr>     
+    @for (int i = 0; i < Model.ServiceAccounts.Count; i++)
+    {
+        var id = "ServiceAccounts_" + i;
+        var btnId = "ServiceAccountBtn_" + i;
+        <tr class="row service-account-details" id="@id">
+            <th class=" col pure-control-group">
+                @*@Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)*@
+                @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                @{ }
+            </th>
+            <th class="col pure-control-group">
+                @*@Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)*@
+                @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
+                @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
+            </th>
+            <th class="col pure-control-group">
+                @*@Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)*@
+                @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                <button type="button" onclick=" remField(this.id);" id="@btnId" title="Remove Service Account" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+            </th>
+            <th class="col pure-control-group" style="display:none;">
+                @Html.LabelFor(m => m.ServiceAccounts[i].Id)
+                @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
+                @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
+                @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
+            </th>
+        </tr>
+    }
+</table>
         }
 
     </fieldset>
