Fixed styling for Depen. Template

--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -196,7 +196,7 @@ else
         </legend>
 
         <template id="Dependencyrow">
-            <table>
+            <table class="pure-table">
                 <tr class="row Dependencies-details" id="Dependencies_{i}" name="Dependencies-details">
                     <div class=" col pure-control-group" style="display:none;">
                         <label> @Resources.Dependencies_ID </label>
