--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -99,40 +99,14 @@
         <legend>
             @Resources.SA
         </legend>
-        <template id="serviceAccountrow">
-                    <div class="row service-account-details" id="ServiceAccounts_{i}" name="service-account-details">
-                        <div class=" col pure-control-group" style="display:none;">
-                            <label> @Resources.SA_ID </label>
-                            <input class="form-control" id="ServiceAccounts[{i}].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
-                        </div>
-                        <div class="col pure-control-group">
-                            <label> @Resources.SA_Name </label> @*"name" handels the backend with class form-control / {i} is replaced in javascipt by the needed index*@
-                            <input class="form-control" id="ServiceAccounts_{i}__.ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
-                            <span class="field-validation-valid text-danger"
-                                  data-valmsg-for="ServiceAccounts[{i}].ServiceAccountName"
-                                  data-valmsg-replace="true">
-                            </span>
-                            <button type="button" onclick="remField(this.id);" id=" ServiceAccountBtn_{i}" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
-                        </div>
-                        <div class="col pure-control-group">
-                            <label> @Resources.SA_InPassManager </label>
-                            <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" value="true" data-val="true" data-val-required="The InPassManager field is required."/>
-                            <span class="field-validation-valid text-danger"
-                                  data-valmsg-for="ServiceAccounts[{i}].InPassManager"
-                                  data-valmsg-replace="true">
-                            </span>
-                        </div>
-                        <div class="col pure-control-group">
-                            <label> @Resources.SA_PassLastUpdated </label>
-                            <input class="form-control" type="datetime" id="ServiceAccounts_{i}__.PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
-                            <span class="field-validation-valid text-danger"
-                                  data-valmsg-for="ServiceAccounts[{i}].PassLastUpdated"
-                                  data-valmsg-replace="true">
-                            </span>
-                        </div>
-                    </div>
-                </template>
-    </fieldset>
+        <table class="pure-table" id="service-account-table">
+            <tr class="row">
+                <th class="col">@Resources.SA_Name</th>
+                <th class="col">@Resources.SA_InPassManager</th>
+                <th class="col">@Resources.SA_PassLastUpdated</th>
+            </tr>
+        </table>
+</fieldset>
     <div class="pure-control-group">
         <button type="button" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
     </div>
