--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -118,20 +118,21 @@
                         <div class="pass-info">
                             <div class="pure-control-group">
                                 <div>
-                                    @if (@serviceAccount.InPassManager)
-                                    {
-                                        <label>@Resources.SA_InPassManager_True <i style="color:green" class="fa fa-check-square"></i></label>
-                                    }
-                                    else
-                                    {
-                                        <label>@Resources.SA_InPassManager_False <i style="color:red" class="fa fa-x"></i></label>
-                                    }
+                                        <label><i class="fa-regular fa-square@(serviceAccount.InPassManager? "-check": "")"></i>@Resources.SA_InPassManager </label>
                                 </div>
                             </div>
                             <div class="pure-control-group">
-                                <label>Password Last Updated</label>
+                                <label>@Resources.SA_PassLastUpdated</label>
                                 <div class="sidebar-text">
-                                    <input class="removeVisualInput" value="@serviceAccount.PassLastUpdated" readonly />
+                                    @{ if (serviceAccount.PassLastUpdated != null)
+                                        {
+                                            <input class="removeVisualInput" value="@serviceAccount.PassLastUpdated.ToString().Split(' ')[0]" readonly />
+                                        }
+                                        else
+                                        {
+                                            <input class="removeVisualInput" value="1990-01-01" readonly />
+                                        }
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -167,7 +168,7 @@
                             <div class="pure-control-group">
                                 <label> Date Last Updated</label>
                                 <div class="sidebar-text">
-                                    <input class="removeVisualInput" value="@dependency.DateUpdated" readonly />
+                                    <input class="removeVisualInput" value="@dependency.DateUpdated.ToString().Split(' ')[0]" readonly />
                                 </div>
                             </div>
                         </div>
